[gd_scene load_steps=6 format=3 uid="uid://game_over_uid"]

[ext_resource type="FontFile" uid="uid://b25431rxog83j" path="res://assets/fonts/Kenney Blocks.ttf" id="1_font"]
[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="2_script"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("1_font")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_stats"]
font = ExtResource("1_font")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_button"]
font = ExtResource("1_font")
font_size = 20

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ResultLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0)

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "PUNTAJE FINAL: 0"
label_settings = SubResource("LabelSettings_stats")
horizontal_alignment = 1

[node name="GoalLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "OBJETIVO: 1000"
label_settings = SubResource("LabelSettings_stats")
horizontal_alignment = 1

[node name="ModeLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "MODO: MOVIMIENTOS"
label_settings = SubResource("LabelSettings_stats")
horizontal_alignment = 1

[node name="RemainingLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "MOVIMIENTOS RESTANTES: 0"
label_settings = SubResource("LabelSettings_stats")
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
modulate = Color(1, 1, 1, 0)

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "JUGAR DE NUEVO"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "MENÚ PRINCIPAL"

[node name="PlayAgainButton/Label" type="Label" parent="CenterContainer/VBoxContainer/ButtonsContainer/PlayAgainButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "JUGAR DE NUEVO"
label_settings = SubResource("LabelSettings_button")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton/Label" type="Label" parent="CenterContainer/VBoxContainer/ButtonsContainer/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "MENÚ PRINCIPAL"
label_settings = SubResource("LabelSettings_button")
horizontal_alignment = 1
vertical_alignment = 1
